	PR target/23071 	* config/rs6000/rs6000.c (darwin_rs6000_special_round_type_align): 	Don't overly align based upon packed packed fields.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157654 138bc75d-0d04-0410-961f-82ee72b054a4